@startuml
skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222



package "<<aggregate Staff>>" {
    entity Staff <<entity>><<root>>{}
    class LicenseNumber <<(V,#FF8B40)value object>> <<identifier>> {}
    class Name <<(V,#FF8B40)value object>> {}
    class FirstName <<(V,#FF8B40)value object>> {}
    class LastName <<(V,#FF8B40)value object>> {}
    class FullName <<(V,#FF8B40)value object>> {}
    class ContactInfo <<(V,#FF8B40)value object>> {}
    class Phone <<(V,#FF8B40)value object>> {}
    class Email <<(V,#FF8B40)value object>> {}
    class Slot <<(V,#FF8B40)value object>> {}
    class Date <<(V,#FF8B40)value object>> {}
    class TimeInterval <<(V,#FF8B40)value object>> {}

}

package "<<aggregate Specialization>>"{
    entity Specialization <<entity>> <<root>> {}
    class SpecializationDenomination <<(V,#FF8B40)value object>>  {}
}



Name --> FirstName
Name -> LastName
Name --> FullName
ContactInfo --> "1" Email
ContactInfo --> "1" Phone
Staff --> "1" Name 
Staff ---> "1" ContactInfo
Staff --> "1" LicenseNumber 
Staff ---> "1..*" Slot 
Staff --> "1" Specialization : specialized in
Specialization --> "1" SpecializationDenomination
Slot --> "1" Date
Slot --> "1" TimeInterval

@enduml